# news-genie

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  REPORT.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
newsgenie/: __init__.py  config.py  llm.py  schema.py  workflow.py
newsgenie/tools/: news.py  search.py  trust.py
newsgenie/util/: cache.py  errors.py
tests/: test_cache.py  test_intent.py  test_llm.py  test_search.py  test_trust.py
