[project]
name = "newsgenie"
version = "0.1.0"
description = "AI-powered news + information assistant scaffold (Streamlit + LangGraph)."
requires-python = ">=3.11,<3.14"
license = "MIT"
readme = "README.md"
keywords = ["news", "ai", "langgraph", "streamlit", "assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Repository = "https://github.com/scholarsmate/news-genie"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:Core Pydantic V1 functionality:UserWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "T20", # flake8-print
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "T201",   # allow print() in demo/CLI contexts
]

[tool.ruff.lint.isort]
known-first-party = ["newsgenie"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
